Closed
Bug 1235299
Opened 7 years ago
Closed 6 years ago
Pass WebGL2 conformance test copy-tex-image-2d-formats
Categories
(Core :: Canvas: WebGL, defect)
Core
Canvas: WebGL
Tracking
()
RESOLVED
FIXED
mozilla46
Tracking | Status | |
---|---|---|
firefox46 | --- | fixed |
People
(Reporter: ethlin, Assigned: ethlin)
References
()
Details
Attachments
(1 file, 3 obsolete files)
We will get assertion error when running the test.
Assignee | ||
Comment 1•7 years ago
|
||
There are two assertions. One is caused by shader compile error[1]. The other one is android assertion[2]. [1] https://dxr.mozilla.org/mozilla-central/source/gfx/gl/GLBlitHelper.cpp#327 [2] https://dxr.mozilla.org/mozilla-central/source/gfx/gl/GLBlitHelper.cpp#396
Assignee | ||
Comment 2•7 years ago
|
||
There was a gl error "Shader info log (103 bytes): ERROR: 0:1: '' : #version required and missing." So I add version tag in shader. For the android assertion, it was added by bug 1215892 to fix warning [1]. I think we can simply remove this assertion. [1] https://hg.mozilla.org/mozilla-central/rev/a5d54cef3b23
Attachment #8702445 -
Flags: review?(jgilbert)
Comment 3•7 years ago
|
||
Comment on attachment 8702445 [details] [diff] [review] Fix shader compile error and remove unnecessary assertion Review of attachment 8702445 [details] [diff] [review]: ----------------------------------------------------------------- ::: gfx/gl/GLBlitHelper.cpp @@ -392,5 @@ > GLint texUnitLoc = mGL->fGetUniformLocation(program, "uTexUnit"); > MOZ_ASSERT(texUnitLoc != -1, "uniform uTexUnit not found"); > mGL->fUniform1i(texUnitLoc, 0); > -#else > - MOZ_ASSERT_UNREACHABLE("gralloc not support on non-android"); This is still true. Why are you removing it?
Attachment #8702445 -
Flags: review?(jgilbert) → review-
Assignee | ||
Comment 4•7 years ago
|
||
Apply jgilbert's comment. Keep the assertion for ConvertSurfaceTexture and ConvertGralloc.
Attachment #8702445 -
Attachment is obsolete: true
Attachment #8702455 -
Flags: review?(jgilbert)
Assignee | ||
Updated•7 years ago
|
Attachment #8702455 -
Attachment is obsolete: true
Attachment #8702455 -
Flags: review?(jgilbert)
Assignee | ||
Comment 5•7 years ago
|
||
The origin macro scope was wrong. The android platform macro should apply to ConvertSurfaceTexture and ConvertGralloc, like [1]. So I change the macro scope and remove the assertion. [1] https://dxr.mozilla.org/mozilla-central/source/gfx/gl/GLBlitHelper.cpp?case=true&from=GLBlitHelper.cpp#245
Attachment #8702640 -
Flags: review?(jgilbert)
Comment 6•7 years ago
|
||
Comment on attachment 8702640 [details] [diff] [review] Fix shader compile error and assertion problem Review of attachment 8702640 [details] [diff] [review]: ----------------------------------------------------------------- Would this interfere with running on Core profiles? We don't have to block on this here, but I'd like to know.
Attachment #8702640 -
Flags: review?(jgilbert)
Attachment #8702640 -
Flags: review+
Attachment #8702640 -
Flags: feedback?(dglastonbury)
Assignee | ||
Comment 7•6 years ago
|
||
Fix try server fails by adding default for switch. https://treeherder.mozilla.org/#/jobs?repo=try&revision=06020735aeb2
Assignee | ||
Updated•6 years ago
|
Attachment #8702640 -
Attachment is obsolete: true
Attachment #8702640 -
Flags: feedback?(dglastonbury)
Assignee | ||
Comment 8•6 years ago
|
||
Comment on attachment 8705458 [details] [diff] [review] Fix shader compile error and assertion problem. (carry r+: jgilbert) Keep f? for comment 6
Attachment #8705458 -
Flags: feedback?(dglastonbury)
Assignee | ||
Updated•6 years ago
|
Keywords: checkin-needed
Comment 10•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/d538bcfa4e69
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox46:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
Comment 11•6 years ago
|
||
(In reply to Jeff Gilbert [:jgilbert] from comment #6) > Would this interfere with running on Core profiles? This depends on the presence of ARB_ES2_compatibility.
Attachment #8705458 -
Flags: feedback?(dglastonbury)
You need to log in
before you can comment on or make changes to this bug.
Description
•