Bug 1235299 - Fix WebGL assertions for copyTexImage2D. r=jgilbert